# fulgur

./: README.md  README.qmd  justfile  pyproject.toml
src/fulgur/: call_py.py  classification.py  model.py  regression.py  utils.py
