[project]
name = "fulgur"
version = "0.1.2"
description = "Estimate linear models on extremely large (potentially out-of-core) datasets."
readme = "README.md"
authors = [
    { name = "Daniel Molitor", email = "molitdj97@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.0.0",
    "formulaic>=1.0.0",
    "polars>=1.0.0",
    "pyarrow",
    "scikit-learn>=1.4.0",
    "tqdm>=4.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "jupyter>=1.1.1",
    "plotnine>=0.15.2",
    "pytest>=9.0.2",
]
